# tral-qml

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  environment_settings.info  main.cpp  toolchain-settings.cmake
sample_Qt_UI_library/: CMakeLists.txt  CustomListModel.cpp  CustomListModel.h  SampleQtUI.cpp  SampleQtUI.h  main.qml  qml.qrc  untitled.ui
sample_library/: CMakeLists.txt  SampleLibrary.cpp  SampleLibrary.h
